--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,12 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# exclude kitchen directory
+.kitchen/
+
+# exclude bundler lock file
+Gemfile.lock
+
+# exclude rbenv local version file
+.ruby-version
