add tests for the Load Balancer

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -24,3 +24,7 @@ suites:
           controls:
             - targetGroupsARNs
             - loadBalancerDNS
+        - name: aws
+          backend: aws
+          controls:
+            - alb
